@@ -1,5 +1,9 @@
 2004-01-20  Bruno Haible  <bruno@clisp.org>
 
+	* stream.d (listen_handle): Use 'var'.
+
+2004-01-20  Bruno Haible  <bruno@clisp.org>
+
 	* makemake.in (cflags.h.stamp): Use $(MV), not $(CP).
 
 2004-01-20  Bruno Haible  <bruno@clisp.org>
